test/runtime/fail/import/missing_close.hy

// expect error: Expected `\)` to close `\(` in import

import (
	"io"
